# gif_parser

./: .gitignore  Cargo.toml  README.md  test.txt
src/: main.rs
src/models/: gif.rs
